# light_framework_mk3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  light_init.cmake
cmake/: light_platform.cmake  pico_sdk.cmake
cmake/util/: light_log.cmake  light_var.cmake
module/light_cli/: CMakeLists.txt
module/light_cli/include/: light_cli.h
module/light_cli/include/module/: mod_light_cli.h
module/light_cli/src/: cli_private.h  command.c  message.c  module.c
module/light_core/: CMakeLists.txt  light_core.cmake
module/light_core/include/: light.h  light_common.h  light_common_compiler.h  light_object.h  light_platform.h  light_stream.h
module/light_core/link/: objects.arm32_m.ld  objects.host_os.ld  objects.host_system.ld  objects.rp2040.ld
module/light_core/src/: framework.c  framework_internal.h  light_common.c  list.c  stream.c
module/light_core_arch_arm32_m/: CMakeLists.txt
module/light_core_arch_arm32_m/include/: light_core_port.h
module/light_core_arch_arm32_m/src/: light_core_arm32_m.c
module/light_core_arch_host_os/: CMakeLists.txt  objects.host_os.ld
module/light_core_arch_host_os/include/: light_core_port.h  light_platform_port.h
module/light_core_arch_host_os/src/: light_object.c  light_platform.c
module/light_core_arch_host_system/: CMakeLists.txt
module/light_core_arch_host_system/include/: light_core_port.h
module/light_core_arch_host_system/src/: light_object.c  light_platform.c
module/light_core_board_host_system/: CMakeLists.txt
module/light_core_board_host_system/include/: light_core_port.h
module/light_core_board_host_system/src/: light_core_host_system.c  light_platform.c
module/light_core_board_pico_hostmode/: CMakeLists.txt  objects.pico_hostmode.ld
module/light_core_board_pico_hostmode/include/: light_core_port.h  light_platform_port.h
module/light_core_board_pico_hostmode/src/: light_object.c  light_platform.c
module/light_core_chip_rp2040/: CMakeLists.txt  objects.rp2040.ld
module/light_core_chip_rp2040/include/: light_core_port.h  light_platform_port.h
module/light_core_chip_rp2040/src/: light_object.c  light_platform.c
platform/arch/: CMakeLists.txt
platform/arch/arm32_m/: CMakeLists.txt
platform/arch/arm32_m/src/: arch.c
platform/arch/host_os_arch/: CMakeLists.txt
platform/arch/host_os_arch/include/: light_arch.h
platform/arch/host_system_arch/: CMakeLists.txt
platform/board/: CMakeLists.txt
platform/board/blackpill/: CMakeLists.txt
platform/board/bluepill_plus/: CMakeLists.txt
platform/board/bluepill_plus/include/: light_board.h
platform/board/host_os_board/: CMakeLists.txt
platform/board/host_system_board/: CMakeLists.txt
platform/board/host_system_board/src/: board.c
platform/board/mini_stm32h7/: CMakeLists.txt
platform/board/mini_stm32h7/src/: board.c
platform/board/pico/: CMakeLists.txt
platform/board/pico/src/: board.c
platform/board/pico_hostmode/: CMakeLists.txt
platform/board/pico_hostmode/src/: board.c
platform/board/pico_w/: CMakeLists.txt
platform/board/pico_w/src/: board.c
platform/chip/: CMakeLists.txt
platform/chip/host_os_chip/: CMakeLists.txt
platform/chip/host_os_chip/include/: light_chip.h
platform/chip/host_os_chip/src/: chip.c
platform/chip/host_system_chip/: CMakeLists.txt
platform/chip/pico_hostmode/: CMakeLists.txt
platform/chip/pico_hostmode/src/: chip.c
platform/chip/rp2040/: CMakeLists.txt
platform/chip/stm32f103/: CMakeLists.txt
platform/chip/stm32f103/src/: chip.c
platform/chip/stm32f411/: CMakeLists.txt
platform/chip/stm32f411/src/: chip.c
platform/chip/stm32h743/: CMakeLists.txt
test/demo_cli/: CMakeLists.txt
test/demo_cli/src/: demo_cli.c
test/framework_demo/: CMakeLists.txt
test/framework_demo/src/: framework_demo.c
